--- a/sintesis_1/sintesis_1.Rmd
+++ b/sintesis_1/sintesis_1.Rmd
@@ -75,14 +75,14 @@ Una forma de ambigüedad gramatical es la ambigüedad gramatical en la que una m
 
 En la primera de ellas, la palabra *haya* se refiere al árbol y, por tanto, su categoría gramatical es la de **nombre**; en la segunda, *haya* se refiere a la tercera persona del singular del verbo haber. 
 
-3. Complejidad computacional de ambigüedad gramatical. ¿Cómo lo resuelven los HMM?
+# 3. Complejidad computacional de ambigüedad gramatical. ¿Cómo lo resuelven los HMM?
 
 Ya hemos visto que calcular 
 
 $$
 \hat{t}_1^n = \arg\max_{t_1^n}P(w_1^n|t_1^n)P(t_1^n)
 $$
-es **costo computacionalmente**. Con la idea de facilitar los cálculos, surgen los Modelo ocultos de Markov (HMM, por sus siglas en inglés) que asumen:
+es **costoso computacionalmente**. Los modelos matemáticos intentan describir la realidad a través de ciertas hipótesis que permitan hacer una simplificación de la realidad y hacer posible los cálculos computacionales. Para el caso de la ambigüedad gramatical, tenemos los Modelos ocultos de Markov (HMM, por sus siglas en inglés) que simplifican la realidad asumiendo que:
 
 1. La probabilidad de que aparezca una palabra depende solo de su función en la oración (*part-of-speech tag*). Esto se traduce, formalmente en
 
@@ -97,10 +97,29 @@ $$
 Por lo tanto, la ecuación **bla** se convierte en 
 
 $$
-\hat{t}_1^n = \arg\max_{t_1^n}P(w_1^n|t_1^n)P(t_1^n)\approx P(w_i|t_i) P(t_i|t_{i-1})
+\hat{t}_1^n = \underset{t_1^n}{\arg\max} \, P(w_1^n|t_1^n)P(t_1^n)\approx \underset{t_1^n}{\arg\max} \,P(w_i|t_i) P(t_i|t_{i-1})
 $$
 
 Con un diagrama puede entenderse mejor en qué consisten los HMM:
+
+
+# 4. ¿Cómo incluye la aproximación de Brill (Transformation-Based Tagging) las ventajas del modelo estocástico y de la aproximación basada en reglas?
+
+La aproximación incluye tanto las ideas de los modelos estocásticos como de las aproximaciones basadas en reglas. ¿Por qué?
+
+Por un lado, el algoritmo supone que hay una catálogo con las distinas estructuras de reglas que pueden existir que son:
+
+- *Cambia la etiqueta **a** a la etiqueta **b** cuando:*
+  - la palabra anterior (siguiente) está etiquetada como **z**.
+  - dos palabras anterior (siguientes) están etiquedatas como **z**.
+  - una de las dos palabras anteriores (siguientes) están etiquetadas como **z**.
+  - Una de las tres palabras anteriores (siguientes) están etiquetads como **z**.
+  - la palabra anterior está etiquetada como **z** y la palabra siguiente está etiquetada como **w**.
+  - la palabra anterior (siguiente) está etiquedad como **z** y la dos palabras anteriores (siguientes) está etiquetadas como **w**.
+  
+Cada una de las variables **a**, **b**, **z** y **w** se refieren a las distintas funciones gramaticales.
+
+Pero estas reglas se apoyan en los modelos estocásticos para terminar de completarse y se nutren de un conjunto de entrenamiento ya etiquetado para aprender cómo se han de construir, lo que suele denominarse **modelo supervisado** en el campo del **Aprendizaje Automático**.
 
 
 
